[package]
name = "pal_compiler_test_intel_x64"
version = "0.1.0"
authors = ["awsjared <awsjared@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pal = { path = "../../../", features = ["intel_64bit", "x64-64bit-none-systemv"] }
