[package]
name = "pal_compiler_test_intel_x64"
version = "0.1.0"
authors = ["awsjared <awsjared@amazon.com>"]
edition = "2018"

[dependencies.pal]
path = "../../../"
default-features = false

[features]
default = ["std"]
std = ["pal/std", "pal/intel_64bit_linux_ioctl"]
nasm = ["pal/intel_64bit_systemv_nasm"]
